--- a/files/AAAI20-CDAC+/CDAC+.bib
+++ b/files/AAAI20-CDAC+/CDAC+.bib
@@ -1,12 +1,9 @@
-@inproceedings{lin-xu-2019-deep,
-    title = "Deep Unknown Intent Detection with Margin Loss",
-    author = "Lin, Ting-En  and
-      Xu, Hua",
-    booktitle = "Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics",
-    month = jul,
-    year = "2019",
-    address = "Florence, Italy",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/P19-1548",
-    pages = "5491--5496",
+@inproceedings{lin2020discovering,
+  title={Discovering new intents via constrained deep adaptive clustering with cluster refinement},
+  author={Lin, Ting-En and Xu, Hua and Zhang, Hanlei},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={34},
+  pages={8360--8367},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/6353},
+  year={2020}
 }
