--- a/files/Preprints/DA-ADB.bib
+++ b/files/Preprints/DA-ADB.bib
@@ -1,5 +1,5 @@
 @article{zhang2022towards,
-  title={Towards Open Intent Detection},
+  title={Learning Discriminative Representations and Decision Boundaries for Open Intent Detection},
   author={Zhang, Hanlei and Xu, Hua and Zhao, Shaojie and Zhou, Qianrui},
   journal={arXiv preprint arXiv:2203.05823},
   year={2022}
